--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #111;
+    background-color: #103F79;
 }
 
 #canvas-container {
@@ -23,7 +23,7 @@ footer {
     text-align: center;
     position: fixed;
     bottom: 0;
-    color: rgb(107, 114, 128);
+    color: #F3B229;
     font-size: 0.8rem;
     padding: 10px;
     width: 100vw;
@@ -31,15 +31,22 @@ footer {
 
 .author {
     position: relative;
-    font-style: italic;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 a {
-    color: rgb(107, 114, 128);
+    color: #F3B229;
     text-decoration: none;
 }
 
-img {
-    margin-bottom: 4px;
+.heart {
+    height: 0.8rem;
+    width: 0.8rem;
+    margin-bottom: 3px;
+}
+
+.chimp {
+    height: 1.1rem;
+    width: 1.1rem;
+    margin-bottom: 6px;
 }
